--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
